other-vpol/restrict-edit-for-endpoints/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-edit-for-endpoints-exception
policies: [../restrict-edit-for-endpoints.yaml]
resources: [../.kyverno-test/resource.yaml]
exceptions: [../.kyverno-test/exception.yaml]
results:
- isValidatingPolicy: true
  kind: ClusterRole
  policy: restrict-edit-for-endpoints
  resources: [system:aggregate-to-edit]
  result: skip
- isValidatingPolicy: true
  kind: ClusterRole
  policy: restrict-edit-for-endpoints
  resources: [system:aggregate-to-edit-safe]
  result: pass
